# mutator-evo

./: .coverage  README.md  cache_performance.json  evolution_monitor.sh  mutator_checkpoint_20250702-143618.pkl  pytest.ini  ray_performance.json  requirements.txt  setup.py
checkpoints/: mutator_checkpoint_20250702-182721.pkl
configs/: default.yaml  performance.yaml
evolution_visualizations/: evolution_data.csv
results/: best_strategy.json  best_strategy.txt
results/checkpoints/: mutator_checkpoint_20250704-005954.pkl  mutator_checkpoint_20250704-010057.pkl  mutator_checkpoint_20250704-010209.pkl  mutator_checkpoint_20250704-010333.pkl  mutator_checkpoint_20250704-010514.pkl  mutator_checkpoint_20250704-010715.pkl  mutator_checkpoint_20250704-153407.pkl  mutator_checkpoint_20250704-153510.pkl  mutator_checkpoint_20250704-153621.pkl  mutator_checkpoint_20250704-153748.pkl  mutator_checkpoint_20250704-153927.pkl  mutator_checkpoint_20250704-154130.pkl  mutator_checkpoint_20250705-162212.pkl  mutator_checkpoint_20250705-162804.pkl  (+8 more)
src/mutator_evo/: pyproject.toml
src/mutator_evo/backtest/: backtrader_adapter.py
src/mutator_evo/core/: config.py  logger.py  ray_pool.py  strategy_embedding.py  strategy_mutator.py
src/mutator_evo/operators/:  __init__.py  _uniform_crossover.py  importance_calculator.py  interfaces.py  mutation_impl.py  rl_mutation.py  shap_importance.py
src/mutator_evo/scripts/: generate_performance_report.py  run_evolution.py  visualize_evolution.py
src/mutator_evo/utils/: alerts.py  memory_tracker.py  monitoring.py  performance.py
(+13 files in other folders)
