[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--benchmark-disable"
testpaths = ["tests/unit", "tests/integration", "tests/benchmark"]
markers = [
    "benchmark: performance tests",
    "unit: unit tests",
    "integration: integration tests"
]

[project]
name = "mutator_evo"
version = "0.1.0"
description = "Evolutionary Strategy Optimization Framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/elouwe/mutator_evo"
"Bug Tracker" = "https://github.com/elouwe/mutator_evo/issues"

[tool.setuptools.packages.find]
where = ["src"]